# notion-quick-notes

./: .RooCoderules  .gitignore  PERFORMANCE_REPORT.md  README.md  TESTING_REPORT.md  notion-quick-notes-development-plan.md  notion-quick-notes-implementation-plan.md  notion-quick-notes-improvement-plan.md  notion-quick-notes-improvement-status.md  notion-quick-notes-nlp-implementation-plan.md  package-lock.json  package.json  tatus  vite.config.ts
memory-bank/: activeContext.md  productContext.md  progress.md  projectbrief.md  systemPatterns.md  techContext.md
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: config.rs  error.rs  lib.rs  main.rs  notion.rs  rate_limit.rs
src/components/: AIAssistant.css  AIAssistant.tsx  AIModelFallbackNotification.css  AIModelFallbackNotification.tsx  AISettings.css  AISettings.tsx  About.css  About.tsx  NLPDetection.css  NLPDetection.tsx  NoteInput.css  NoteInput.tsx  NotificationIndicator.css  NotificationIndicator.tsx  RateLimitIndicator.css  RateLimitIndicator.tsx  Settings.css  Settings.tsx  SyncStatus.css  SyncStatus.tsx
src/services/: networkStatus.ts  notificationService.ts  offlineQueue.ts  rateLimitService.ts  syncService.ts
src/services/ai/: aiService.ts  config.ts  index.ts  openai-client.ts  types.ts
src/services/nlp/: entityExtractor.ts  index.ts  nlpService.ts  types.ts
src/worker/: api-worker.ts  useApiWorker.ts
