[package]
name = "notion-quick-notes"
version = "0.1.0"
description = "A lightweight app for quick note capture to Notion"
authors = ["Alex Grama"]
license = ""
repository = "https://github.com/AlexGrama7/notion-quick-notes"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5.0", features = [] }

[dependencies]
tauri = { version = "1.5.3", features = ["clipboard-all", "global-shortcut-all", "shell-open", "system-tray", "window-all"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json", "blocking"] }
tokio = { version = "1", features = ["full"] }
chrono = "0.4"
thiserror = "1.0"
lazy_static = "1.4.0"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
